fix(popover): round coords remove blurred popovers (#1911)
(cherry picked from commit 9db66d500eee958b61d73182e9f274d32a633c79)

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -122,6 +122,7 @@ button.desktop-explorer {
     list-style: none;
     margin: 0;
     padding: 0;
+    overscroll-behavior: contain;
 
     & li>a {
       color: var(--dark);
@@ -202,6 +203,7 @@ button.desktop-explorer {
   cursor: pointer;
   transition: transform 0.3s ease;
   backface-visibility: visible;
+  flex-shrink: 0;
 }
 
 li:has(> .folder-outer:not(.open))>.folder-container>svg {
